homebrewのpathが誤っている問題を修正

--- a/zsh/homebrew.zsh.tmpl
+++ b/zsh/homebrew.zsh.tmpl
@@ -1,5 +1,2 @@
 # Homebrew
-{{ if eq .chezmoi.os "linux" }}
-eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
-{{ end }}
-# TOOD: darwin
+eval "$($HOMEBREW_PREFIX/bin/brew shellenv)"
