add ghcr function

--- a/zsh/functions.zsh.tmpl
+++ b/zsh/functions.zsh.tmpl
@@ -15,6 +15,7 @@ load fzf-docker-exec
 load fzf-docker-log
 load fzf-git-checkout
 load fzf-git-log
+load ghcr
 
 
 {{ if eq .chezmoi.os "darwin" -}}
